# GIAIC-Q3_Python-AgenticAI

./: readme.md
.devcontainer/: devcontainer.json
Projects/Assignment_6_OOP_Series/: 01_student_self.py  02_counter_cls.py  03_car_public.py  04_bank_class_var.py  05_mathutils_static.py  06_logger_construct_destruct.py  07_employee_access.py  08_teacher_super.py  09_shape_abstract.py  10_dog_instance.py  13_car_engine_composition.py  14_department_employee_aggregation.py  15_diamond_mro.py  17_class_decorator.py  19_multiplier_callable.py  20_custom_exception.py  21_countdown_iterable.py
Projects/chat-bot/: .gitignore  chat-bot.py
Projects/growth-mindset-challenge/: data-sweeper.py
Projects/library-manager/: library-manager.py
Projects/password-strength/: pass-stregnth.py
Projects/secure-data-encryption/: main.py  secure_data.json
Projects/unit-converter/: unit-converter.py
monday-2-5/AI-Powered_Job-Recommnender/: config.py  main.py  pyproject.toml  requirements.txt
monday-2-5/AI-Powered_Job-Recommnender/data/: sample_jobs.csv  sample_users.csv
monday-2-5/AI-Powered_Job-Recommnender/recommender/: job_scraper.py  models.py  recommender.py  utils.py
monday-2-5/Kaladi_Converter_Challenge-3/: README.md  main.py  pyproject.toml  requirements.txt
monday-2-5/Kaladi_Converter_Challenge-3/converters/: document_converter.py
monday-2-5/assignment-1/: script.py
monday-2-5/assignment-2/: main.py
monday-2-5/assignment-3/: main.py
monday-2-5/freelance_gig_recommender/: fast-api.py  gigs.db  main.py  pyproject.toml
ramadan-coding-challenge/Advance-Agent/: main.py  pyproject.toml
ramadan-coding-challenge/Calculator-App/: main.py  pyproject.toml
ramadan-coding-challenge/Chatbot-with-Authentication/: main.py  pyproject.toml
ramadan-coding-challenge/Deploy-Streamlit-Apps/: main.py  pyproject.toml
ramadan-coding-challenge/QA-Chatbot/: main.py  pyproject.toml  terminal.py
ramadan-coding-challenge/Quiz-App/: main.py
ramadan-coding-challenge/Simple-Chatbot/: main.py  pyproject.toml
ramadan-coding-challenge/Simple-OpenAI-Agent-SDK/: .env  main.py  pyproject.toml
ramadan-coding-challenge/Time-Zone/: main.py  pyproject.toml
ramadan-coding-challenge/fastapi-api/: main.py
ramadan-coding-challenge/money-making-machine/: main.py
(+17 files in other folders)
