[project]
name = "kaladi-converter-challenge-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astor>=0.8.1",
    "beautifulsoup4>=4.13.4",
    "cairosvg>=2.8.0",
    "comtypes>=1.4.10",
    "docx2pdf>=0.1.8",
    "ffmpeg>=1.4",
    "flask>=3.1.1",
    "google-generativeai>=0.8.5",
    "lxml>=5.4.0",
    "markdown>=3.8",
    "moviepy>=1.0.3",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "py7zr>=0.22.0",
    "pydub>=0.25.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "python-magic>=0.4.27",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.2",
    "rarfile>=4.2",
    "reportlab>=4.4.0",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
    "soundfile>=0.13.1",
    "streamlit>=1.45.1",
    "svglib>=1.5.1",
    "rembg>=2.0.50",
    "onnxruntime>=1.22.0",
    "google-auth>=2.40.1",
    "google-auth-oauthlib>=1.2.2",
    "google-auth-httplib2>=0.2.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "multipart>=1.2.1",
    "python-multipart>=0.0.20",
    "supabase>=2.15.1",
    "stripe>=12.1.0",
    "pycairo>=1.28.0",
    "scikit-learn>=1.6.1",
    "pkgconfig>=1.5.5",
    "cmake>=4.0.2",
]
